Fix Container shift + Add Delete Book button

--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
 }
 
 body {
-  height: 100;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr 1fr;
-  padding: 40px;
+  padding-top: 40px;
   background-image: linear-gradient(120deg, orange, red, purple);
 }
 
@@ -153,16 +153,34 @@ a:active {
   height: 175px;
 }
 
-.book-content,
-.book-status {
+.book-content {
   height: 100px;
   width: 100%;
+}
+
+.functional-buttons {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
 .book-status {
   height: 30px;
   color: white;
   border-radius: 15px;
+  font-size: 1rem;
+  width: 70%;
+}
+
+.delete {
+  height: 30px;
+  color: white;
+  border-radius: 50%;
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #read {
